# fantasy-name-generator

./: .gitignore  README.md  app.py  package-lock.json  pyproject.toml  requirements.txt  tailwind.config.js
static/data/: anglosaxon_f.txt  anglosaxon_m.txt  arabic_f.txt  arabic_m.txt  german_f.txt  german_m.txt  greekmyth_f.txt  greekmyth_m.txt  norse_f.txt  norse_m.txt  slavic_f.txt  slavic_m.txt  turkish_f.txt  turkish_m.txt  victorian_f.txt  victorian_m.txt  welsh_f.txt  welsh_m.txt
static/src/: main.css
templates/: index.html  layout.html
